# oruga

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  oruga2_gde3.py  oruga2_nsga2.py  oruga3_gde3_wmd.py  oruga3_nsga2_wmd.py  oruga_massive_experiments.py  oruga_massive_experiments_smog.py  oruga_webscraping.py  oruga_word2vec.py  oruga_wordnet.py  pyproject.toml  requirements.txt  texts.txt
comparison/web/: cs.py  jaya.py  tlbo.py
comparison/word2vec/: cs.py
comparison/wordnet/: pso.py
docs/: conf.py
examples/: config.example.yaml  multiobjective.py  quickstart.py  reproduce_paper.py
legacy/: README.md  oruga2_nsga2.py  oruga3_gde3_wmd.py  oruga_wordnet.py  requirements.txt
legacy/comparison/web/: gde3.py  nsga2.py  pso.py
legacy/comparison/word2vec/: gde3.py  jaya.py  nsga2.py  pso.py  tlbo.py
legacy/comparison/wordnet/: cs.py  gde3.py  jaya.py  nsga2.py  tlbo.py
oruga/: __init__.py  cli.py  config.py  corpus.py  encoding.py  grammar.py  objectives.py  pipeline.py  problem.py  readability.py  synonyms.py
oruga/optimizers/: __init__.py  adapters.py  base.py  builtin.py  metaheuristics.py
tests/: conftest.py  test_encoding.py  test_objectives.py  test_optimizers.py  test_pipeline_cli_config.py  test_readability.py
